# controllers/homeController.js
@@ -1,0 +1,10 @@
+const homeController = async (req, res) => {
+  return res.status(200).json({
+    project: "Books API",
+    github_url: "https://github.com/Kummirai/books",
+    project_live_url: "https://books-project-xqrb.onrender.com/",
+    project_api_docs: "https://books-project-xqrb.onrender.com/api-docs",
+  });
+};
+
+export { homeController };
